--- a/index.html
+++ b/index.html
@@ -581,12 +581,9 @@
         <!-- Start Footer -->
         <footer class="bg-customized">
             <div class="container">
-                <div class="row d-flex flex-column text-center text-white p-5 ">
+                <div class="row text-center text-white p-5 ">
                     <div class="col">
                         © Copyright <span class="fw-bold">zicoaamer</span>. All Rights Reserved
-                    </div>
-                    <div class="col">
-                        Designed by BootstrapMade
                     </div>
                 </div>
             </div>
